<resources>
    <string name="app_name">EpicSoundboard</string>
    <string name="rec_button_start">REC</string>
    <string name="rec_button_stop">STOP</string>
    <string name="clear_button">CLEAR</string>
    <string name="empty_button" />
    <string name="rec_button_cancel">CANCEL</string>
    <string name="rec_button_ok">OK</string>
    <string name="rec_button_play">PLAY</string>
</resources>
