<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.beats.epic.epicsoundboard.MainActivity">

    <GridLayout android:id="@+id/soundBoardGrid"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="3"
        android:layout_weight="1">
        <!-- Sound buttons -->
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button android:id="@+id/recButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rec_button_start"/>
        <Button android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rec_button_play"
            android:visibility="gone"/>
        <Button android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rec_button_stop"
            android:visibility="gone"/>
        <Button android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rec_button_ok"
            android:visibility="gone"/>
        <Button android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rec_button_cancel"
            android:visibility="gone"/>
        <Button android:id="@+id/clearButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/clear_button"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Add Sound"/>
    </LinearLayout>

</LinearLayout>
